# backend-weather

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 00a3569bb1ee_seed_incentive_configs.py  acfb39f04c03_add_source_to_evaluations.py  ca498f0c03d9_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/routers/: config.py  fleet.py  regions.py
app/core/: config.py  exceptions.py
app/domain/: enums.py
app/domain/models/: __init__.py  incentive_config.py  investment_evaluation.py  region.py  weather_snapshot.py
app/domain/schemas/: config.py  fleet.py  regions.py  weather.py
app/infrastructure/: database.py  scheduler.py
app/infrastructure/weather_client/: base.py  owm_client.py
app/repositories/: config_repository.py  investment_repository.py  region_repository.py  weather_repository.py
app/services/: investment_service.py  snapshot_service.py  weather_service.py
app/static/: app.js  dashboard.html  login.html  style.css
tests/: conftest.py  fakes.py
tests/integration/: conftest.py  test_config_repository.py  test_investment_repository.py  test_region_repository.py  test_weather_repository.py
tests/unit/: test_config_router.py  test_enums.py  test_fakes.py  test_fleet_router.py  test_investment_service.py  test_owm_client.py  test_regions_router.py  test_repositories.py  test_scheduler.py  test_schemas.py  test_snapshot_service.py  test_weather_client.py  test_weather_service.py
