[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "fleet-investment-service"
version = "0.1.0"
description = "Microservicio de Rappi para calcular inversión en flota según clima"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "respx>=0.22,<1",
    "freezegun>=1.4,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["B008"]  # Depends() in defaults is the standard FastAPI pattern

[tool.ruff.lint.per-file-ignores]
"app/domain/models/__init__.py" = ["E402"]  # models must import after Base definition

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_subclassing_any = false    # SQLAlchemy Base + Pydantic BaseSettings
disallow_untyped_decorators = false  # FastAPI route/exception_handler decorators

[[tool.mypy.overrides]]
module = ["app.repositories.*"]
warn_return_any = false  # SQLAlchemy scalar_one_or_none returns Any

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 85
show_missing = true
